# digital-twin-toolbox

./: .env  .env.copy  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.build-no-cache.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.worker.blender.yml  docker-compose.worker.mesh.yml  docker-compose.worker.opensfm.yml  docker-compose.worker.photogrammetry.yml  docker-compose.worker.point-cloud.yml  docker-compose.worker.vector.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  requirements_tools.txt  setup.js  start.sh  webpack.config.js
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker-blender  Dockerfile.worker-mesh  Dockerfile.worker-opensfm  Dockerfile.worker-photogrammetry  Dockerfile.worker-point-cloud  Dockerfile.worker-vector  pyproject.toml  tests-start.sh
backend/app/: crud.py  initial_data.py  main.py  manage.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0f58b1b64e6f_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: assets.py  login.py  output.py  pipelines.py  users.py  utils.py
backend/app/core/: config.py  db.py
backend/app/models/: task.py  user.py  user_db.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/utils/: user.py
backend/app/worker/: cartesian.py  expression.py  main.py  polyhedron.py  processes.py  tasks.py  types.py  utils.py
backend/app/worker/common/: cartesian.py  expression.py  processes.py  types.py  utils.py
backend/app/worker/mesh/: create_tileset_json.py  georeference.py  obj_to_tileset.py  opensfm.py  run_dataset.py  texrecon.py  xyz_to_mesh.py
backend/app/worker/photogrammetry/: create_tileset.py  images_to_point_cloud.py  images_to_sparse_reconstruction.py  mask_images.py  mesh_tiling.py  mesh_to_3dtile.py  point_cloud_to_mesh.py  sparse_reconstruction_to_dense_point_cloud.py  utils.py
backend/app/worker/pipelines/: __init__.py  mesh.py  obj.py  photogrammetry.py  point.py  pointcloud.py  polygon.py
backend/app/worker/tasks/: __init__.py
backend/app/worker/tasks/blender/: mesh_tiling.py  (+1 more)
backend/node/: earcut.js  package-lock.json  package.json
backend/samples/: cone.glb  model.glb  tree.glb
backend/scripts/: celery-reload.sh  celery.sh  create_tasks_db.sh  start-reload.sh  start.sh
(+162 files in other folders)
