[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = []

[dependency-groups]
worker = [
    "celery>=5.4.0,<6.0.0",
    "redis>=5.0.8,<6.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "pydantic>2.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "pyproj",
    "tenacity>=8.2.3,<9.0.0",
    "sentry-sdk>=1.40.6,<3.0.0",
]
api = [
    {include-group = "worker"},
    "fastapi[standard]>=0.109.1,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt==4.0.1",
    "pyjwt>=2.8.0,<3.0.0",
    "emails>=0.6,<1.0",
    "gunicorn>=22.0.0,<23.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.12.1,<2.0.0",
    "httpx>=0.25.1,<1.0.0",
]
vector = [
    "earcut>=1.1.5,<2.0.0",
    "mapbox-earcut>=1.0.3,<2.0.0",
]
pointcloud = [
    "py3dtiles[las,ply,postgres]>=8.0.2,<9.0.0",
    "laspy[laszip]>=2.5.4,<3.0.0",
]
mesh = [
    "bpy==4.5.1",
]
photogrammetry = [
    "open3d>=0.19.0,<1.0.0",
    "opencv-python>=4.11.0.86,<5.0.0",
    "psutil>=5.9.0,<8.0.0",
]
dev = [
    # Dev hot reload: auto-restart backend/workers on code changes (compose.sh --dev).
    "watchfiles>=1.0.0,<2.0.0",
    "pytest>=7.4.3,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0",
    "coverage>=7.4.3,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
